# CMU-15618-final-project

./: .gitignore  README.md
CPU-OpenMP-version/: .smallpt.cpp.swp  random.h  smallpt  smallpt.cpp
GPU-BVH-version/: CMakeLists.txt  Makefile  rand_scene_gen  rand_scene_gen.cpp  rand_scene_gen2  random.h  scene  scene2
GPU-OptiX-version/: README.md
GPU-OptiX-version/src/: CMakeLists.txt
GPU-OptiX-version/src/CMake/: configure_optix.cmake
GPU-OptiX-version/src/OptiX/RestOfLife/: .main.cpp.swp  main.cpp
GPU-OptiX-version/src/OptiX/RestOfLife/scene/: ioScene.h
